--- a/shared/Pulumi.shared.yaml
+++ b/shared/Pulumi.shared.yaml
@@ -1,5 +1,6 @@
 config:
   gcp:project: "infrastructure-417007"
+  gcp:billingProject: "infrastructure"
   gcp:region: "us-central1"
   gcp:zone: "us-central1-b"
 encryptionsalt: v1:Zkl1UzTbZmg=:v1:mbJJ5R74L/2SQxvP:Qxpj/6hZpzt+MhZL/B3BEXpOpdKcIQ==
